--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -295,7 +295,7 @@ Collapsed=0
 
 [A03 - LERP - About]
 Pos=1,1
-Size=340,60
+Size=323,165
 Collapsed=0
 
 [A03s - LERP - About]
@@ -411,5 +411,10 @@ Collapsed=0
 [A02 - 3D Primitives_d - About]
 Pos=1,1
 Size=316,284
+Collapsed=0
+
+[A03 - LERP_d - About]
+Pos=1,1
+Size=316,165
 Collapsed=0
 
