--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -345,7 +345,7 @@ Collapsed=0
 
 [E06 - Projections - About]
 Pos=1,1
-Size=340,60
+Size=323,288
 Collapsed=0
 
 [E06s - Projections - About]
@@ -421,5 +421,10 @@ Collapsed=0
 [E06 - Projections_d - About]
 Pos=1,1
 Size=323,288
+Collapsed=0
+
+[A04 - Camera_d - About]
+Pos=1,1
+Size=316,114
 Collapsed=0
 
