--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -400,7 +400,7 @@ Collapsed=0
 
 [12_MeshClass_d - About]
 Pos=1,1
-Size=316,165
+Size=323,165
 Collapsed=0
 
 [E05 - LERP_d - About]
@@ -431,5 +431,10 @@ Collapsed=0
 [E07 - ARBB_d - About]
 Pos=1,1
 Size=323,254
+Collapsed=0
+
+[13_Translation and Scale_d - About]
+Pos=1,1
+Size=340,60
 Collapsed=0
 
